# suln

./: Cargo.toml  README.adoc  README.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  lineparser.rs  linestring.rs  log.rs  main.rs  numberline.rs
testdata/: a-b-c.txt  example.json
