[package]
name = "suln"
version = "0.1.0"
edition = "2021"
authors = ["jiro"]
description = "`suln` is a CLI that prints surroundings of line number with `grep`."
keywords = ["grep", "cli", "util"]
documentation = "https://github.com/jiro4989/suln"
homepage = "https://github.com/jiro4989/suln"
repository = "https://github.com/jiro4989/suln"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"
